fixed bug: post content overflows

--- a/wwwroot/css/webapp_main.css
+++ b/wwwroot/css/webapp_main.css
@@ -329,3 +329,6 @@ footer#footer>a, footer#footer>span {
     align-items: center;
     justify-content: center;
 }
+.post-content {
+    overflow: auto;
+}
